--- a/inedx.html
+++ b/inedx.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Admin Page</title>
 </head>
 
@@ -21,7 +22,7 @@
             </div>
         </header>
         <main>
-            <aside>
+            <aside class="aside">
                 <nav class="main__nav">
                     <ul class="nav__ul">
                         <li>CORE</li>
