--- a/inedx.html
+++ b/inedx.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Admin Page</title>
 </head>
 
@@ -15,10 +15,11 @@
             <h3 class="header__title">
                 Admin Page
             </h3>
+            <i class="fa fa-bars"></i>
             <div class="header__search">
                 <label for="gsearch">Search Google:</label>
                 <input class="search__input" type="search" id="gsearch" name="gsearch">
-                <button class="search__btn"></button>
+                <button class="search__btn"><i class="fa fa-search"></i></button>
             </div>
         </header>
         <main>
