--- a/inedx.html
+++ b/inedx.html
@@ -22,23 +22,24 @@
                 <button class="search__btn"><i class="fa fa-search"></i></button>
             </div>
         </header>
-        <main>
+        <main class="main">
             <aside class="aside">
                 <nav class="main__nav">
                     <ul class="nav__ul">
                         <li>CORE</li>
-                        <li>Dashboard</li>
+                        <li> <i class="fa fa-tachometer"></i>Dashboard</li>
                         <li>INTERFACE</li>
-                        <li>Layouts</li>
-                        <li>Pages</li>
+                        <li><i class="fa fa-windows"></i> Layouts</li>
+                        <li><i class="fa fa-bookmark"></i>Pages</li>
                         <li>ADDONS</li>
-                        <li>Charts</li>
-                        <li>Tables</li>
+                        <li><i class="fa fa-area-chart"></i>Charts</li>
+                        <li><i class="fa fa-table"></i>Tables</li>
                     </ul>
                 </nav>
             </aside>
             <section class="content">
                 <h1 class="dashboard">Dashboard</h1>
+                <div class="main__breadcrumb">Dashboard</div>
                 <div class="main__cards">
                     <div class="main__card main__card--blue">
                         <div class="card__top">Primary card</div>
