--- a/inedx.html
+++ b/inedx.html
@@ -10,58 +10,64 @@
 </head>
 
 <body>
-    <div class="grid-container">
-        <header class="header--dark">
-            <h3 class="header__title">
-                Admin Page
-            </h3>
-            <i class="fa fa-bars"></i>
-            <div class="header__search">
-                <label for="gsearch">Search Google:</label>
-                <input class="search__input" type="search" id="gsearch" name="gsearch">
-                <button class="search__btn"><i class="fa fa-search"></i></button>
-            </div>
-        </header>
-        <main class="main">
-            <aside class="aside">
-                <nav class="main__nav">
-                    <ul class="nav__ul">
-                        <li>CORE</li>
-                        <li> <i class="fa fa-tachometer"></i>Dashboard</li>
-                        <li>INTERFACE</li>
-                        <li><i class="fa fa-windows"></i> Layouts</li>
-                        <li><i class="fa fa-bookmark"></i>Pages</li>
-                        <li>ADDONS</li>
-                        <li><i class="fa fa-area-chart"></i>Charts</li>
-                        <li><i class="fa fa-table"></i>Tables</li>
-                    </ul>
-                </nav>
-            </aside>
-            <section class="content">
-                <h1 class="dashboard">Dashboard</h1>
-                <div class="main__breadcrumb">Dashboard</div>
-                <div class="main__cards">
-                    <div class="main__card main__card--blue">
-                        <div class="card__top">Primary card</div>
-                        <div class="card__bottom">View Details</div>
-                    </div>
-                    <div class="main__card main__card--yellow">
-                        <div class="card__top">Warning Card</div>
-                        <div class="card__bottom">View Details</div>
-                    </div>
-                    <div class="main__card main__card--green">
-                        <div class="card__top">Success Card</div>
-                        <div class="card__bottom">View Details</div>
-                    </div>
-                    <div class="main__card main__card--red">
-                        <div class="card__top">Danger Card</div>
-                        <div class="card__bottom">View Details</div>
-                    </div>
-                </div>
-            </section>
-        </main>
 
-    </div>
+    <header class="header--dark">
+        <h3 class="header__title">
+            Admin Page
+        </h3>
+        <i class="fa fa-bars"></i>
+        <div class="header__search">
+            <label for="gsearch">Search Google:</label>
+            <input class="search__input" type="search" id="gsearch" name="gsearch">
+            <button class="search__btn"><i class="fa fa-search"></i></button>
+        </div>
+    </header>
+    <main>
+        <div class="main-container">
+            <div class="aside2">
+                <aside class="aside">
+                    <nav class="main__nav">
+                        <ul class="nav__ul">
+                            <li>CORE</li>
+                            <li> <i class="fa fa-tachometer"></i>Dashboard</li>
+                            <li>INTERFACE</li>
+                            <li><i class="fa fa-windows"></i> Layouts</li>
+                            <li><i class="fa fa-bookmark"></i>Pages</li>
+                            <li>ADDONS</li>
+                            <li><i class="fa fa-area-chart"></i>Charts</li>
+                            <li><i class="fa fa-table"></i>Tables</li>
+                        </ul>
+                    </nav>
+                </aside>
+            </div>
+            <div class="section2">
+                <section class="content">
+                    <h1 class="dashboard">Dashboard</h1>
+                    <div class="main__breadcrumb">Dashboard</div>
+                    <div class="main__cards">
+                        <div class="main__card main__card--blue">
+                            <div class="card__top">Primary card</div>
+                            <div class="card__bottom">View Details</div>
+                        </div>
+                        <div class="main__card main__card--yellow">
+                            <div class="card__top">Warning Card</div>
+                            <div class="card__bottom">View Details</div>
+                        </div>
+                        <div class="main__card main__card--green">
+                            <div class="card__top">Success Card</div>
+                            <div class="card__bottom">View Details</div>
+                        </div>
+                        <div class="main__card main__card--red">
+                            <div class="card__top">Danger Card</div>
+                            <div class="card__bottom">View Details</div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </main>
+
+
 </body>
 
 </html>
