--- a/inedx.html
+++ b/inedx.html
@@ -13,15 +13,20 @@
 
     <header class="header--dark">
         <h3 class="header__title">
-            Admin Page
+            Admin Page <i class="fa fa-bars"></i>
         </h3>
-        <i class="fa fa-bars"></i>
+
         <div class="header__search">
-            <label for="gsearch">Search Google:</label>
-            <input class="search__input" type="search" id="gsearch" name="gsearch">
+            <input class="search__input" type="search" id="gsearch" name="gsearch" placeholder="Search for...">
             <button class="search__btn"><i class="fa fa-search"></i></button>
+            <i class="fa fa-user"></i>
         </div>
+        
     </header>
+
+
+
+
     <main>
         <div class="main-container">
             <div class="aside2">
