--- a/inedx.html
+++ b/inedx.html
@@ -34,13 +34,13 @@
                     <nav class="main__nav">
                         <ul class="nav__ul">
                             <li>CORE</li>
-                            <li> <i class="fa fa-tachometer"></i>Dashboard</li>
+                            <li> <i class="fa fa-tachometer"></i><span>Dashboard</span></li>
                             <li>INTERFACE</li>
-                            <li><i class="fa fa-windows"></i> Layouts</li>
-                            <li><i class="fa fa-bookmark"></i>Pages</li>
+                            <li><i class="fa fa-windows"></i><span>Layouts</span><i class="fa fa-angle-right"></i></li>
+                            <li><i class="fa fa-bookmark"></i><span>Pages</span><i class="fa fa-angle-right"></i></li>
                             <li>ADDONS</li>
-                            <li><i class="fa fa-area-chart"></i>Charts</li>
-                            <li><i class="fa fa-table"></i>Tables</li>
+                            <li><i class="fa fa-area-chart"></i><span>Charts</span></li>
+                            <li><i class="fa fa-table"></i><span>Tables</span></li>
                         </ul>
                     </nav>
                 </aside>
