--- a/inedx.html
+++ b/inedx.html
@@ -34,7 +34,7 @@
                     <nav class="main__nav">
                         <ul class="nav__ul">
                             <li>CORE</li>
-                            <li> <i class="fa fa-tachometer"></i><span>Dashboard</span></li>
+                            <li class="dash"> <i class="fa fa-tachometer"></i><span>Dashboard</span></li>
                             <li>INTERFACE</li>
                             <li><i class="fa fa-windows"></i><span>Layouts</span><i class="fa fa-angle-right"></i></li>
                             <li><i class="fa fa-bookmark"></i><span>Pages</span><i class="fa fa-angle-right"></i></li>
