--- a/inedx.html
+++ b/inedx.html
@@ -21,7 +21,7 @@
             <button class="search__btn"><i class="fa fa-search"></i></button>
             <i class="fa fa-user"></i>
         </div>
-        
+
     </header>
 
 
@@ -45,26 +45,29 @@
                     </nav>
                 </aside>
             </div>
+
+
             <div class="section2">
                 <section class="content">
                     <h1 class="dashboard">Dashboard</h1>
                     <div class="main__breadcrumb">Dashboard</div>
+
                     <div class="main__cards">
                         <div class="main__card main__card--blue">
                             <div class="card__top">Primary card</div>
-                            <div class="card__bottom">View Details</div>
+                            <div class="card__bottom">View Details<i class="fa fa-angle-right"></i></div>
                         </div>
                         <div class="main__card main__card--yellow">
                             <div class="card__top">Warning Card</div>
-                            <div class="card__bottom">View Details</div>
+                            <div class="card__bottom">View Details<i class="fa fa-angle-right"></i></div>
                         </div>
                         <div class="main__card main__card--green">
                             <div class="card__top">Success Card</div>
-                            <div class="card__bottom">View Details</div>
+                            <div class="card__bottom">View Details<i class="fa fa-angle-right"></i></div>
                         </div>
                         <div class="main__card main__card--red">
                             <div class="card__top">Danger Card</div>
-                            <div class="card__bottom">View Details</div>
+                            <div class="card__bottom">View Details<i class="fa fa-angle-right"></i></div>
                         </div>
                     </div>
                 </section>
